--- a/src/app/admin/add-edit-purchase/add-edit-purchase.component.css
+++ b/src/app/admin/add-edit-purchase/add-edit-purchase.component.css
@@ -33,8 +33,6 @@
     margin-top:-15px;
     border-radius:5px ;
 }
-
-
 .view_notice {
     height: 40px;
     width: 100%;
@@ -90,6 +88,15 @@
     top: -5px;
     left: 0px;
 }
+.save_btn{
+    margin-right: 558px;
+    margin-top: 18px;
+    height: 40px;
+    font-size: 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-spacing: 4px;
+    background-color: #0a4547;
+}
 
 button {
     height: 30px;
@@ -102,6 +109,10 @@ button {
     margin-bottom: 20px;
 
 }
+.nav-tabs{
+   background-color: #0f575a;
+}
+
 
 mat-form-field {
     margin-right: 5px;
@@ -167,6 +178,13 @@ a{
     top: 3px;
     margin: 1px;
     }
+    .add_btn{
+        margin-top: 39px;
+        background-color: #0b4648;
+        color: white;
+    }
+  
+    
 /* .footer{
     background-color: #0b4648;
     width:100%;
@@ -174,3 +192,187 @@ a{
     color:whitesmoke;
     margin-top:274px;
 } */
+/* ==============================================change======================================================= */
+.party_btn{
+    width: 70px;
+    height: 36px;
+    border-radius: 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.item_btn{
+    width: 70px;
+    height: 36px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border-radius: 5px;  
+}
+.final_btn{
+    width: 90px;
+    margin-left: 2px;
+    height: 36px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border-radius: 5px;
+}
+
+
+.addButton{
+    background-color: #05363c;
+    color: aliceblue;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    font-style: bold;
+    
+}
+/* ====================================================Media Queryss===================================================== */
+@media(max-width: 420px){
+    .mat-form-field-infix {
+        display: block;
+        position: relative;
+        flex: auto;
+        min-width: -28px;
+        width: 243px;
+    }
+    .textarea_box{
+        width: 200px;
+        height: 20px;
+    }
+   
+    .save_btn{
+        margin-right: 145px;
+        margin-top: 42px;
+        font-size: 17px;
+    }
+.party_btn{ 
+    width: 56px;
+    padding-right: -5px;
+    padding-left: 11px;
+    height: 36px;
+}
+.item_btn{
+    width: 57px;
+    height: 36px;
+    padding-left: 14px;
+   
+}
+.final_btn{
+    width: 77px;
+    margin-left: 1px;
+    padding-left: 4px;
+    padding-right: 0px;
+    text-align: center;
+    height: 36px;
+}
+#billnobtn{
+   
+    right: 10px;
+    height: 38px;
+    top: 121px;
+    width: 131px;
+    margin-right: -4px;
+}
+}
+@media(max-width: 520px) {
+    .textarea_box{
+        width: 03px;
+        margin-left: -22px;
+        padding-left: 37px;
+    }
+    #billnobtn{
+        top: 125px;
+    }
+    .save_btn{
+        margin-right: 150px;
+      
+    }  
+}
+@media(max-width: 620px){
+    #billnobtn{
+        top: 125px;
+       
+    }
+    .textarea_box{
+        width: 200px;
+        margin-left: -210px;
+    }
+    .save_btn{
+        margin-right: 210px;
+    } 
+}
+
+
+
+
+/* for table css starting here */
+.view_notice {
+    height: 40px;
+    width: 100%;
+    background-color: #0b4648;
+    color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#add_purchase {
+    position: relative;
+    top: -5px;
+    left: 5px;
+    width: 27px;
+    height: 29px;
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.notice_text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.count_search {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    box-sizing: border-box;
+    color: #0d5e58;
+}
+
+#table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+   
+}
+
+
+.trth {
+    width: 1000px;
+    color: white;
+    height: 40px;
+    font-weight: bold;
+    background-color:  #0a4547;
+}
+
+tr:nth-child(even) {
+ background-color: whitesmoke; 
+    height: 35px;
+}
+
+tr:nth-child(odd) {
+    height: 35px;
+}
+
+tr:hover {
+    background-color: #0f575a;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+ng-container {
+    text-align: center;
+}
+
+/* for table css ending here */
+
+
