--- a/src/app/admin/unit/unit.component.html
+++ b/src/app/admin/unit/unit.component.html
@@ -3,7 +3,7 @@
   <mat-icon id="add_unit" (click)="add_unit()">add_circle</mat-icon>
 </div>
 <div class="count_search">
-  <span class="notice_text"> Total :</span>
+  <span class="notice_text"> Total :{{unitcount}}</span>
   <div class="search">
     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
   </div>
