--- a/src/app/admin/add-edit-size/add-edit-size.component.css
+++ b/src/app/admin/add-edit-size/add-edit-size.component.css
@@ -10,6 +10,7 @@
     flex: 1 1 auto;
     color: rgb(20,89,92);
     margin-bottom: 20px;
+    font-size: 18px;
 }
 .material-icons{
     color: rgb(20,89,92);
