--- a/src/app/admin/add-edit-unit/add-edit-unit.component.css
+++ b/src/app/admin/add-edit-unit/add-edit-unit.component.css
@@ -10,7 +10,7 @@
     flex: 1 1 auto;
     margin-bottom: 20px;
     color: rgb(20,89,92);
-    /* font-size: 15px; */
+    font-size: 18px;
 }
 .material-icons{
     color: rgb(20,89,92);
