--- a/src/app/admin/add-edit-category/add-edit-category.component.css
+++ b/src/app/admin/add-edit-category/add-edit-category.component.css
@@ -9,7 +9,10 @@
 .example-spacer {
     flex: 1 1 auto;
     color: rgb(20,89,92);
-    margin-bottom: 20px;}
+    margin-bottom: 20px;
+    font-size: 18px;
+}
+   
 .material-icons{
     color: rgb(20,89,92);
     margin-bottom: 20px;
@@ -19,11 +22,10 @@ textarea{
  } 
 mat-toolbar{
     height: 40px;
-    /* margin-bottom: 20px; */
+    margin-bottom: -20px;
     padding: 0px;
     background: none;
     position: relative;
     color:whitesmoke;
-    /* background-color:#14595c; */
 }
 
