--- a/src/app/admin/add-edit-employee/add-edit-employee.component.css
+++ b/src/app/admin/add-edit-employee/add-edit-employee.component.css
@@ -1,7 +1,7 @@
 .column {
   margin-right:5px;
   width:200px;
-  height:200px;
+  height:213px;
   float: left;   
 }
  textarea{
@@ -49,5 +49,113 @@ mat-toolbar {
 }
 .upload_box:hover{
   border: 2px solid black;
+
+}
+@media (min-width:1200px) and (max-width:2000px) {
+  .column mat-form-field {
+    width: 93%;
+  }
+
+  #mobil {
+    width: 200px;
+    position: relative;
+    right: -615px;
+    top: -70px;
+  }
+
+  #account {
+    position: relative;
+    left: -205px;
+  }
+
+  .upload_box {
+    width: 185px;
+    position: relative;
+    left: -205px;
+
+  }
+
+  .reset_btn {
+    float: left;
+    margin-left: 60.6%;
+    margin-top: -7%;
+
+  }
+
+  .add_btn {
+    float: right;
+    margin-right: 12.5%;
+    margin-top: -7%;
+  }
+}
+@media (min-width:768px) and (max-width:1200px) {
+  .column {
+    width: 100%;
+    height: 72px;
+    display: flex;
+  }
+
+  .column mat-form-field {
+    width: 30.5%;
+    margin-left: 3%;
+  }
+
+  form {
+    padding-right: 19px;
+  }
+
+  .upload_box {
+    width: 250px;
+    margin-left: 3%;
+  }
+
+  #adress {
+    width: 97%;
+    margin-left: 3%;
+    margin-top: -5px;
+  }
+
+  .reset_btn {
+    float: left;
+    margin-top: 0px;
+    margin-left: 30%;
+  }
+
+  .add_btn {
+    float: right;
+    margin-right: 30%;
+  }
+}
+
+@media(max-width:768px) {
+  .column {
+    width: 100%;
+    height: auto;
+  }
+
+  .column mat-form-field {
+    width: 100%;
+  }
+
+  #adress {
+    width: 100%;
+    margin-top: -5px;
+  }
+  .upload_box {
+    width: 100%;
+  }
+  .reset_btn {
+    width: 30%;
+    float: left;
+    margin-left: 10%;
+    margin-top: 0px;
+  }
+
+  .add_btn {
+    width: 30%;
+    float: right;
+    margin-right: 10%;
+  }
+
 
 }
