--- a/src/app/admin/add-edit-gst/add-edit-gst.component.css
+++ b/src/app/admin/add-edit-gst/add-edit-gst.component.css
@@ -10,6 +10,7 @@
     flex: 1 1 auto;
     margin-bottom: 20px;
     color: rgb(20,89,92);
+    font-size: 18px;
 }
 .material-icons{
         color: rgb(20,89,92);
