--- a/src/app/admin/add-edit-party/add-edit-party.component.css
+++ b/src/app/admin/add-edit-party/add-edit-party.component.css
@@ -1,26 +1,61 @@
-  .column {
-    margin-right: 1px;
-    width: 205px;
-    height:200px;
-    float: left;
+.column {
+  margin-right: 1px;
+  width: 205px;
+  height:200px;
+  float: left;
 
-  }
-  .column_1 mat-form-field{
-    width: 400px;
-    margin-top: 5px;
-  }
-  textarea {
-    height: 18px;      
-  } 
+}
+.column_1 mat-form-field{
+  width: 400px;
+  margin-top: 5px;
+}
+textarea {
+  height: 18px;      
+} 
 
-  .example-spacer {
-    flex: 1 1 auto;
-    margin-bottom: 20px;
-    color: rgb(20,89,92);
-  }  
-  .material-icons{
-    color: rgb(20,89,92);
-    margin-bottom: 20px;
+.example-spacer {
+  flex: 1 1 auto;
+  margin-bottom: 20px;
+  color: rgb(20,89,92);
+  font-size: 18px;
+}  
+.material-icons{
+  color: rgb(20,89,92);
+  margin-bottom: 20px;
+}
+.reset_btn {
+  width:80px;
+  height: 40px;
+  margin-right:180px ;
+
+}
+button{
+  top:20px;
+}
+
+.add_btn {
+  width: 80px;
+  height: 40px;  
+  background-color: green;
+  color: whitesmoke; 
+  margin-right:150px ;   
+
+} 
+mat-toolbar {
+  height: 40px;
+  background: none;
+  color: #f4f8f8;
+  padding:0px;
+  position: relative;
+  /* background-color:#14595c; */
+}
+
+mat-icon {
+  float: right;
+}
+@media (min-width:1200px) and (max-width:2000px){
+  .column_1 mat-form-field {
+    width: 99%;
   }
   .reset_btn {
     width:80px;
@@ -28,10 +63,6 @@
     margin-right:180px ;
 
   }
-  button{
-    top:20px;
-  }
-
   .add_btn {
     width: 80px;
     height: 40px;  
@@ -40,139 +71,109 @@
     margin-right:150px ;   
  
   } 
-  mat-toolbar {
-    height: 40px;
-    background: none;
-    color: #f4f8f8;
-    padding:0px;
-    position: relative;
-    /* background-color:#14595c; */
-  }
+}
 
-  mat-icon {
+
+@media (min-width:768px) and (max-width:1200px){
+  .column{
+    width: 100%;
+    height: auto; 
+    display: flex;
+  }
+  .column mat-form-field{
+    width: 30.5%;
+    margin-left: 2%;
+  }
+ 
+  .column_1{
+    width: 96%;
+    margin-left: 2%;
+  }
+  .column_1 mat-form-field{
+    width: 100%;
+    margin-top: 2px;
+  }
+ 
+  .reset_btn{
+    width: 30%;
+    float: left;
+    margin: 0px;
+    margin-left: 10%;
+    margin-top: -18px;
+
+  }
+  .add_btn{
+    width: 30%;
     float: right;
+    margin: 0px;
+   margin-right: 10%;
+   margin-top: -18px;
   }
-  @media (min-width:1200px) and (max-width:2000px){
-    .column_1 mat-form-field {
-      width: 99%;
-    }
-    .reset_btn {
-      width:80px;
-      height: 40px;
-      margin-right:180px ;
-  
-    }
-    .add_btn {
-      width: 80px;
-      height: 40px;  
-      background-color: green;
-      color: whitesmoke; 
-      margin-right:150px ;   
-   
-    } 
+}
+
+@media (min-width:521px) and (max-width:767px){
+  .column{
+    width: 100%;
+    height: auto;
+    
   }
-
-
-  @media (min-width:768px) and (max-width:1200px){
-    .column{
-      width: 100%;
-      height: auto; 
-      display: flex;
-    }
-    .column mat-form-field{
-      width: 30.5%;
-      margin-left: 2%;
-    }
-   
-    .column_1{
-      width: 96%;
-      margin-left: 2%;
-    }
-    .column_1 mat-form-field{
-      width: 100%;
-      margin-top: 2px;
-    }
-   
-    .reset_btn{
-      width: 30%;
-      float: left;
-      margin: 0px;
-      margin-left: 10%;
-      margin-top: -18px;
-
-    }
-    .add_btn{
-      width: 30%;
-      float: right;
-      margin: 0px;
-     margin-right: 10%;
-     margin-top: -18px;
-    }
+  .column mat-form-field{
+    width: 100%;
   }
-
-  @media (min-width:521px) and (max-width:767px){
-    .column{
-      width: 100%;
-      height: auto;
-      
-    }
-    .column mat-form-field{
-      width: 100%;
-    }
-    .column_1{
-      width: 100%;
-      height: auto;
-    }
-    .column_1 mat-form-field{
-      width: 100%;
-    }
-   
-    .reset_btn{
-      width: 30%;
-      float: left;
-      margin: 0px;
-      margin-left: 10%;
-      margin-top: -18px;
-
-    }
-    .add_btn{
-      width: 30%;
-      float: right;
-      margin: 0px;
-     margin-right: 10%;
-     margin-top: -18px;
-    }
-   
+  .column_1{
+    width: 100%;
+    height: auto;
   }
-  @media (max-width:520px){
-    .column{
-      width: 100%;
-      height: auto;
-    }
-    .column mat-form-field{
-      width: 100%;
-    }
-    .column_1{
-      width: 100%;
-      height: auto;
-    }
-    .column_1 mat-form-field{
-      width: 100%;
-    }
-    .reset_btn{
-      width: 30%;
-      float: left;
-      margin: 0px;
-      margin-left: 10%;
-      margin-top: -18px;
-
-    }
-    .add_btn{
-      width: 30%;
-      float: right;
-      margin: 0px;
-     margin-right: 10%;
-     margin-top: -18px;
-    }
-   
+  .column_1 mat-form-field{
+    width: 100%;
   }
+ 
+  .reset_btn{
+    width: 30%;
+    float: left;
+    margin: 0px;
+    margin-left: 10%;
+    margin-top: -18px;
+
+  }
+  .add_btn{
+    width: 30%;
+    float: right;
+    margin: 0px;
+   margin-right: 10%;
+   margin-top: -18px;
+  }
+ 
+}
+@media (max-width:521px){
+  .column{
+    width: 100%;
+    height: auto;
+  }
+  .column mat-form-field{
+    width: 100%;
+  }
+  .column_1{
+    width: 100%;
+    height: auto;
+  }
+  .column_1 mat-form-field{
+    width: 100%;
+  }
+  .reset_btn{
+    width: 30%;
+    float: left;
+    margin: 0px;
+    margin-left: 10%;
+    margin-top: -18px;
+
+  }
+  .add_btn{
+    width: 30%;
+    float: right;
+    margin: 0px;
+   margin-right: 10%;
+   margin-top: -18px;
+  }
+ 
+}
