--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,66 +1,64 @@
 mat-sidenav{
-    background-color:#14595c;
-    height:100%;    
-    width:250px;   
+  background-color:#14595c;
+  height:100%;    
+  width:250px;   
 }
 mat-sidenav-content{
-    height: 100vh;
-    background-color: whitesmoke;
+  height: 100vh;
+  background-color: whitesmoke;
 }
 .main{
-    padding: 5px;
+  padding: 0px 5px 5px 5px ;
 }
 mat-toolbar{
-    background-color:#14595c;
-    justify-content: space-between;  
-    
-   
+  background-color:#14595c;
+  justify-content: space-between;  
+ height: 62px; 
 }
 mat-icon{
-    color: whitesmoke;
-    cursor: pointer;
+  color: whitesmoke;
+  cursor: pointer;
 }
 
 .loginas{
-    font-size: 18px;
-    color: whitesmoke;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+  font-size: 18px;
+  color: whitesmoke;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
 }
 .user-icon{
-    position: relative;
-    top: 7px;
-    
-   
+  position: relative;
+  top: 7px;
+  
+ 
 }
 table {
-    width: 100%;
-  }
-  a{
-    text-decoration: none;
-   
-  }
-  a button{
-    color: whitesmoke;
-    text-align: center;
-  }
+  width: 100%;
+}
+a{
+  text-decoration: none;
  
-  @media(min-width:420px)and (max-width:768px) {
-    .loginas{
-       display: none;
-    }
-    .main{
-      padding: 0px;
-    }
+}
+a button{
+  color: whitesmoke;
+  text-align: center;
+}
+
+@media(min-width:420px)and (max-width:768px) {
+  .loginas{
+     display: none;
   }
-  @media(max-width:420px){
-    mat-sidenav{        
-        width:170px;
-       
-    } 
-    
-    .loginas{
-      display: none;
-   }    
+  .main{
+    padding: 0px;
   }
+}
+@media(max-width:420px){
+  mat-sidenav{        
+      width:170px;
+     
+  } 
   
+  .loginas{
+    display: none;
+ }    
+}
